# vk_oc_projet08_credit_scoring_prod

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_logs_insert.py
.github/workflows/: ci-cd.yml  ci.yml
app/: feature_limits.json  main.py  predictor.py  predictor_v0.py  schemas.py
app/dashboard/: queries.py  streamlit_app.py  streamlit_app_v0.py  streamlit_app_v2.py
app/database/: connection.py  create_tables.py  models_v0.py  session.py  test_connection.py
app/models/: api_log.py  drift_monitoring.py  input_data.py  prediction.py  reference_stats.py  system_health_log.py
app/utils/: feature_validation.py
artifacts/model/: model.joblib  threshold.json
data/: sample_request.json  sample_request_client_risk.json
docs/: commits_history.md
notebooks/: Profiling_Optimisation.ipynb
scripts/: batch_prediction.py  batch_prediction_10k.py  batch_prediction_5k.py  capture_dashboard.py  check_sample_request.py  compute_reference.py  et4_profile_prediction.py  et4_test_regression_model.py  feature_limits.py
src/: export_model_v2.py  export_production_model.py  model_config.py  model_loader.py  register_model_signature.py  request_generator.py  test_business_prediction.py  test_integration_model.py  test_model_loading.py
tests/: conftest.py  test_health.py  test_model.py  test_predict.py  test_pydantic_validation.py
